# AquaSensor-software-projects-y2s2

./: README.md  backend.Dockerfile  compose.yml  frontend.Dockerfile  pyproject.toml
api-middleware/: pyproject.toml
api-middleware/src/api_middleware/: __init__.py  app.py  downstream_auth.py  functions.py  models.py
docs/: Client questions.md  Personas.md  Requirements.md  User-Stories.md
docs/c4/: context.md
src/aquasensor_backend/: __init__.py  app.py
src/frontend/: .htaccess  chart.php  index.php  map.php
src/frontend/html/: register.html
src/frontend/private/: footer.php  header.php
