[project]
name = "aquasensor-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TerminalMan", email = "84923604+SecretiveShell@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.7",
    "pydantic>=2.10.6",
    "uvicorn>=0.34.0",
]

[project.scripts]
aquasensor-backend = "aquasensor_backend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
