[project]
name = "api-middleware"
version = "0.1.0"
description = "Convert aquasensor API into modern json rest API"
readme = "README.md"
authors = [
    { name = "TerminalMan", email = "84923604+SecretiveShell@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
api-middleware = "api_middleware:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
