[project]
name = "api-middleware"
version = "0.1.0"
description = "Convert aquasensor API into modern json rest API"
readme = "README.md"
authors = [
    { name = "TerminalMan", email = "84923604+SecretiveShell@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.1",
    "fastapi>=0.115.7",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "uvicorn>=0.34.0",
]

[project.scripts]
api-middleware = "api_middleware:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
